Fix arrows jumping

--- a/apps/block/stylesheets/index.styl
+++ b/apps/block/stylesheets/index.styl
@@ -13,13 +13,14 @@
   position relative
   display flex
   align-items center
-  justify-content center
+  justify-content space-between
   overflow auto
 
   +below(950px)
     height 90vh
     padding 0 unit
-    margin-top topbar_h
+    margin-top 0
+    overflow hidden
 
   &__info
     position absolute
@@ -40,7 +41,7 @@
     &__toggle-info
       z-index 2001
       position absolute
-      bottom unit - 3
+      bottom unit
       right unit
       display inline-block
       cursor pointer
@@ -184,11 +185,10 @@
 .block-arrow
   cursor pointer
   height 100%
-  width 10vw
+  min-width 10%
   opacity 0
   display none
   z-index 1
-  margin-right auto
   align-items center
   justify-content center
 
@@ -208,8 +208,9 @@
 .block-mobile-arrow 
   display none
   +below(950px)
+    display block
     position absolute
-    bottom 0
+    bottom unit
     left 0
     width 100%
     text-align center
@@ -222,16 +223,9 @@
 .modalize .block-arrow
   display flex
 
-  +below(950px)
-    opacity 0.2
-
   svg.iconic.iconic-md:not(.iconic-size-sm):not(.iconic-size-lg)
     width 20px
     height 20px
-
-.block-arrow--right
-  margin-right 0
-  margin-left auto
 
 .js-url-connections-list h5
   text-align center
